@@ -1,3 +1,7 @@
+Wed May 16 19:54:00 2007        Pat Rankin      <rankin@pactechdata.com>
+
+	* vms-conf.h: re-sync with configh.in.
+
 Sun Apr 29 18:09:17 2007        Pat Rankin      <rankin@pactechdata.com>
 
 	* redirect.h: declare snprintf() if CRTL_VER_V732 is defined;
